XC-310 fix alignment in table column headers

--- a/assets/stylesheets/less/partials/table.less
+++ b/assets/stylesheets/less/partials/table.less
@@ -64,6 +64,7 @@ html.edge {
     margin-top: 4px;
     table-layout: fixed;
     cursor: default;
+    overflow: hidden; // fixes XC-310
 
     .animating { // on th and tds
         pointer-events: none;
